Fix font sizes on smaller screens

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,7 @@ h1 {
     font-weight: bold;
     font-size: 72px;
     font-style: italic;
+    margin-top: 15px;
     margin-bottom: 50px;
 }
 
@@ -16,4 +17,30 @@ h2 {
 
 a {
     text-decoration: underline;
+}
+
+@media only screen and (max-width: 820px) {
+    h1 {
+        font-size: 66px;
+    }
+    
+    h2 {
+        font-size: 28px;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    h2 {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    h1 {
+        font-size: 56px;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
 }
